<resources>
    <string name="app_name">Inventory App</string>
    <string name="empty_view_title_text">It\'s a bit lonely here…</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="sale_button">SALE</string>
    <string name="insert_book">Insert Book</string>
    <string name="edit_book">Edit Book</string>
    <string name="book_name">Name</string>
    <string name="book_price">Price</string>
    <string name="book_quantity">Quantity</string>
    <string name="category_book">Book</string>
    <string name="category_supplier">Supplier</string>
    <string name="supplier_phone_number">Phone Number</string>
    <string name="supplier_name">Name</string>
    <string name="save_book">Save Book</string>
    <string name="delete_book">Delete Book</string>
    <string name="call_supplier">Call Supplier</string>
    <string name="amount">Amount (default is 1)</string>
    <string name="delete_all_books">Delete All Books</string>
    <string name="activity_title_insert">Insert Book</string>
    <string name="activity_title_edit">Edit Book</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="delete_dialog_msg">Delete this Book?</string>
    <string name="uknown_supplier">Unknown Supplier</string>
    <string name="unknown_phone">Unknown Phone</string>
</resources>
