<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditBookActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:text="@string/category_book"
                style="@style/CategoryStyle" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_book_name"
                    android:hint="@string/book_name"
                    android:inputType="text"
                    style="@style/EditorFieldStyle" />

                <EditText
                    android:id="@+id/edit_book_price"
                    android:hint="@string/book_price"
                    android:inputType="numberDecimal"
                    style="@style/EditorFieldStyle" />

                <EditText
                    android:id="@+id/edit_book_quantity"
                    android:hint="@string/book_quantity"
                    android:inputType="number"
                    style="@style/EditorFieldStyle" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">
            <TextView
                android:text="@string/category_supplier"
                style="@style/CategoryStyle" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">
                <EditText
                    android:id="@+id/edit_supplier_name"
                    android:hint="@string/supplier_name"
                    android:inputType="text"
                    style="@style/EditorFieldStyle" />

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    android:hint="@string/supplier_phone_number"
                    android:inputType="phone"
                    style="@style/EditorFieldStyle" />
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>